--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav>
               <ul>
                 <li class="hidden-lg hidden-md"><a href="http://katty-azabache.github.io/reto/">Home</a></li>
-                <li><a href="http://katty-azabache.github.io/reto/">Sobre nosotros</a></li><li class="hidden-xs">|</li>
+                <li><a href="http://katty-azabache.github.io/farolito-nosotros/">Sobre nosotros</a></li><li class="hidden-xs">|</li>
                 <li class="hidden-lg hidden-md"><a href="#">Ingresa tu cuenta</a></li>
                 <li class="hidden-lg hidden-md"><a href="http://katty-azabache.github.io/blog-farolito/">Blog</a></li>
                 <li class="hidden-xs"><a href="http://katty-azabache.github.io/reto/#oportunidades">Oportunidades</a></li>
